Fix inconsistencies on Mobile UI

--- a/src/resources/postcss/tickets-refresh.pcss
+++ b/src/resources/postcss/tickets-refresh.pcss
@@ -254,7 +254,7 @@
 
 	input,
 	textarea {
-		max-width: 100%;
+		max-width: calc( 100% - 132px );
 	}
 
 	.ticket_field {
